# carving-fusion

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  API_REVIEW_AND_PLAN.md  CLANG_TIDY_WARNINGS_PLAN.md  CLAUDE.md  CMakeLists.txt  CODE_QUALITY.md  CPPLINT.cfg  ITEM_2_TODO_PROGRESS.md  PLAN-api-improvements.md  PLAN.md  README.md  REFACTORING_PLAN.md  TODO_CLEANUP_PROGRESS.md  TODO_LOW_PRIORITY.md  add_newlines.py  build_and_test  chip_carving_paths_cpp.manifest  chip_carving_paths_cpp.manifest.in  compile_commands.json  create_command_icons.py  create_test_icons.py  fix_lint_issues.py  increment_version.py  increment_version.sh  install  run_coordinate_regression_tests.sh  run_coverage.sh  run_surface_z_regression_tests.sh  run_tests.sh  test_coverage_analysis.md  test_detail.xml  test_medial_axis_standalone.cpp  test_results.xml
cmake/: Coverage.cmake  GenerateVersion.cmake
hooks/: install.sh  pre-commit
include/commands/: HelloWorldCommand.h
include/core/: SharedConstants.h
include/geometry/: Leaf.h  MedialAxisProcessor.h  MedialAxisUtilities.h  Point2D.h  Point3D.h  SVGGenerator.h  Shape.h  ShapeFactory.h  TriArc.h  VCarveCalculator.h  VCarvePath.h
include/parsers/: DesignParser.h
include/utils/: ErrorHandler.h  Optional.h  TempFileManager.h  logging.h
schema/: constants.json  design-schema-v2.json
scripts/: analyze_coverage.sh  check_file_length.sh  clangd_lint.py  run_clang_tidy.sh
src/: main.cpp  version.h  version.h.in
src/adapters/: FusionAPIAdapter.cpp  FusionAPIAdapter.h  FusionAPIFactory.cpp  FusionLogger.cpp  FusionSketch.cpp  FusionSketch3D.cpp  FusionSketchConstruction.cpp  FusionSketchCore.cpp  FusionWorkspace.cpp  FusionWorkspaceCurve.cpp  FusionWorkspaceCurveExtraction.cpp  FusionWorkspaceCurveGeometry.cpp  FusionWorkspaceCurveSurface.cpp  FusionWorkspaceCurveUtils.cpp  FusionWorkspaceEntityLookup.cpp  FusionWorkspaceProfile.cpp  FusionWorkspaceProfileGeometry.cpp  FusionWorkspaceProfileSearch.cpp  FusionWorkspaceProfileSearch.h  FusionWorkspaceProfileTypes.h  FusionWorkspaceSketch.cpp  FusionWorkspaceSketchBasic.cpp  FusionWorkspaceSketchComponent.cpp  FusionWorkspaceSketchPlane.cpp  IFusionInterface.h
src/commands/: HelloWorldCommand.cpp  PluginCommands.cpp  PluginCommands.h  PluginCommandsCreation.cpp  PluginCommandsExecution.cpp  PluginCommandsGeometry.cpp  PluginCommandsGeometryChaining.cpp  PluginCommandsGeometryChaining.h  PluginCommandsGeometryMain.cpp  PluginCommandsImport.cpp  PluginCommandsParameters.cpp  PluginCommandsParametersSelection.cpp  PluginCommandsValidation.cpp  SettingsCommand.cpp  SettingsCommand.h
src/core/: PluginInitializer.cpp  PluginInitializer.cpp.backup  PluginInitializer.h  PluginInitializerCommands.cpp  PluginInitializerGlobals.h  PluginManager.cpp  PluginManager.cpp.backup  PluginManager.h  PluginManagerCore.cpp  PluginManagerImport.cpp  PluginManagerLegacyPaths.cpp  PluginManagerPaths.cpp  PluginManagerPathsCore.cpp  PluginManagerPathsGeometry.cpp  PluginManagerPathsVisualization.cpp  PluginManagerUtils.cpp  PluginManagerVCarve.cpp
src/geometry/: Leaf.cpp  MedialAxisProcessor.cpp  MedialAxisProcessorCore.cpp  MedialAxisProcessorValidation.cpp  MedialAxisProcessorVoronoi.cpp  MedialAxisUtilities.cpp  SVGGenerator.cpp  SVGGeneratorComparator.cpp  SVGGeneratorCore.cpp  SVGGeneratorShapes.cpp  ShapeFactory.cpp  TriArc.cpp  TriArcCore.cpp  TriArcGeometry.cpp  TriArcSketch.cpp  VCarveCalculator.cpp  VCarveCalculatorCore.cpp  VCarveCalculatorOptimization.cpp  VCarveCalculatorSurface.cpp  VCarvePath.cpp
src/parsers/: DesignParser.cpp
src/utils/: DebugLogger.cpp  DebugLogger.h  ErrorHandler.cpp  ErrorHandler.h  FusionComponentTraverser.cpp  FusionComponentTraverser.h  TempFileManager.cpp  UIParameterHelper.cpp  UIParameterHelper.h  UnitConversion.h  logging.cpp
temp_output/logs/: extraction_called.txt  fusion_strokes_test.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  chip_carving_tests[1]_include.cmake  chip_carving_tests[1]_tests.cmake  cross_validation_test.cpp  standalone_medial_axis_test  standalone_medial_axis_test.cpp  test_SVGGenerator.cpp  test_ShapeFactory.cpp  test_main.cpp
tests/Testing/Temporary/: CTestCostData.txt
tests/adapters/: MockAdapters.h  MockFactory.h  MockLogger.h  MockSketch.h  MockUserInterface.h  MockWorkspace.h  test_MockAdapters.cpp  test_PolygonChaining.cpp  test_SketchArcDrawing.cpp
tests/commands/: test_ParameterExtraction.cpp  test_ParameterValidation.cpp  test_SelectionValidation.cpp  test_SketchSelectionValidation.cpp  test_ToolSelectionLogic.cpp
tests/core/: test_PathGenerationLogic.cpp  test_PluginManager.cpp
tests/geometry/: test_CoordinateSystemRegression.cpp  test_CoordinateTransform.cpp  test_GeometryUtilities.cpp  test_Leaf.cpp  test_LeafVisual.cpp  test_MedialAxisProcessor.cpp  test_MedialAxisRobustness.cpp  test_MedialAxisUtilities.cpp  test_Point2D.cpp  test_PolygonExtraction.cpp  test_SurfaceZDetectionRegression.cpp  test_TriArc.cpp  test_TriArcVisual.cpp  test_VCarveCalculator.cpp  test_VCarvePath.cpp
tests/medial_axis_truth_data/: leaf_horizontal.truth  triangle_curved.truth
tests/mocks/: MockLogging.cpp
tests/parsers/: CTestTestfile.cmake  parser_tests[1]_include.cmake  parser_tests[1]_tests.cmake  test_DesignParser.cpp
tests/utils/: test_ErrorHandler.cpp  test_TempFileManager.cpp  test_UnitConversion.cpp
